[gd_scene load_steps=4 format=3 uid="uid://dltqmyosod48a"]

[ext_resource type="Script" uid="uid://e476fi081kl4" path="res://Scenes/main/pause_ui.gd" id="1_baubf"]
[ext_resource type="Texture2D" uid="uid://bar733ipw34bt" path="res://Assets/ui/empty.png" id="2_175hy"]
[ext_resource type="FontFile" uid="uid://dalk1d1r8dnpb" path="res://Assets/ui/Stacked pixel.ttf" id="3_i0vfa"]

[node name="pause_ui" type="Node2D"]
script = ExtResource("1_baubf")

[node name="contiue" type="TextureButton" parent="."]
offset_left = 489.0
offset_top = 278.0
offset_right = 529.0
offset_bottom = 294.0
scale = Vector2(3, 3)
texture_normal = ExtResource("2_175hy")

[node name="continue_text" type="RichTextLabel" parent="."]
offset_left = 513.0
offset_top = 276.0
offset_right = 655.0
offset_bottom = 316.0
scale = Vector2(1.14, 1.14)
theme_override_fonts/normal_font = ExtResource("3_i0vfa")
bbcode_enabled = true
text = "
[wave amp=30 freq=1]Continue"

[node name="exit" type="TextureButton" parent="."]
offset_left = 506.0
offset_top = 354.0
offset_right = 546.0
offset_bottom = 370.0
scale = Vector2(2, 3)
texture_normal = ExtResource("2_175hy")

[node name="exit_text" type="RichTextLabel" parent="."]
offset_left = 512.0
offset_top = 351.0
offset_right = 654.0
offset_bottom = 391.0
scale = Vector2(1.14, 1.14)
theme_override_fonts/normal_font = ExtResource("3_i0vfa")
bbcode_enabled = true
text = "
   [wave amp=30 freq=1]Exit"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(558, 338)

[connection signal="pressed" from="contiue" to="." method="_on_contiue_pressed"]
[connection signal="finished" from="exit_text" to="." method="_on_exit_text_finished"]
