extends Node2D


@onready var contiue: TextureButton = $contiue
@onready var continue_text: RichTextLabel = $continue_text
@onready var exit: TextureButton = $exit
@onready var exit_text: RichTextLabel = $exit_text


func _on_contiue_pressed() -> void:
	pass


func _on_exit_text_finished() -> void:
	pass # Replace with function body.
